@@ -5,7 +5,6 @@ lib_LTLIBRARIES =
 kde_module_LTLIBRARIES = libkchartpart.la
 libkchartpart_la_SOURCES = kchart_part.cc \
 	kchart_view.cc kchart_factory.cc \
-	kchartBarConfigDialog.cc \
 	kchartBarConfigPage.cc \
 	kchartColorConfigPage.cc \
 	kchartParameterConfigPage.cc \
@@ -47,7 +46,6 @@ kchart_la_LIBADD = $(LIB_KOFFICECORE)
 
 noinst_HEADERS =  kchart_part.h \
 		kchart_view.h kchart_factory.h \
-		kchartBarConfigDialog.h \
 		kchartBarConfigPage.h \
 		kchartColorConfigPage.h \
 		kchartParameterConfigPage.h \
